--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   syncfusion_flutter_charts: ^28.1.33
   dot_navigation_bar: ^1.0.2
   google_nav_bar: ^5.0.7
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
