--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.6.0
+  sdk: ^3.5.4
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,7 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  image_picker: ^0.8.7
+  tflite_flutter: ^0.11.0
+  image: ^4.5.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -39,6 +41,19 @@ dependencies:
   dot_navigation_bar: ^1.0.2
   google_nav_bar: ^5.0.7
   provider: ^6.1.2
+  firebase_auth: ^5.4.0
+  intl: ^0.20.1
+  uuid: ^4.5.1
+  file_picker: ^8.1.7
+  share_plus: ^10.1.4
+  path_provider: ^2.1.5
+  path: ^1.9.0
+  firebase_core: ^3.10.0
+  cloud_firestore: ^5.6.1
+  firebase_database: ^11.3.1
+  permission_handler: ^11.3.1
+  shared_preferences: ^2.4.0
+  tflite: ^1.1.2
 
 dev_dependencies:
   flutter_test:
@@ -63,8 +78,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/
-  #   - images/a_dot_ham.jpeg
+    - assets/model.tflite
+    - assets/097.jpg
+    - assets/severity_table.png
+    - assets/ems_logo.png
+    - assets/labels.txt
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
