--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>API_KEY</key>
-	<string>AIzaSyDeqV4ua4vZQVqrTRN0LDrreMIyC2BhWr0</string>
-	<key>GCM_SENDER_ID</key>
-	<string>352348488843</string>
-	<key>PLIST_VERSION</key>
-	<string>1</string>
-	<key>BUNDLE_ID</key>
-	<string>com.example.mej</string>
-	<key>PROJECT_ID</key>
-	<string>flutter-auth-cc778</string>
-	<key>STORAGE_BUCKET</key>
-	<string>flutter-auth-cc778.firebasestorage.app</string>
-	<key>IS_ADS_ENABLED</key>
-	<false></false>
-	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
-	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
-	<key>IS_GCM_ENABLED</key>
-	<true></true>
-	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
-	<key>GOOGLE_APP_ID</key>
-	<string>1:352348488843:ios:96b63b144eb426842e408e</string>
-</dict>
+	<dict>
+		<key>API_KEY</key>
+		<string>apikey</string>
+		<key>GCM_SENDER_ID</key>
+		<string>352348488843</string>
+		<key>PLIST_VERSION</key>
+		<string>1</string>
+		<key>BUNDLE_ID</key>
+		<string>com.example.mej</string>
+		<key>PROJECT_ID</key>
+		<string>flutter-auth-cc778</string>
+		<key>STORAGE_BUCKET</key>
+		<string>flutter-auth-cc778.firebasestorage.app</string>
+		<key>IS_ADS_ENABLED</key>
+		<false></false>
+		<key>IS_ANALYTICS_ENABLED</key>
+		<false></false>
+		<key>IS_APPINVITE_ENABLED</key>
+		<true></true>
+		<key>IS_GCM_ENABLED</key>
+		<true></true>
+		<key>IS_SIGNIN_ENABLED</key>
+		<true></true>
+		<key>GOOGLE_APP_ID</key>
+		<string>1:352348488843:ios:96b63b144eb426842e408e</string>
+	</dict>
 </plist>
